--- a/app/view/index.html
+++ b/app/view/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Vue HN 2.0</title>
+    <title>农商学习微平台</title>
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <link rel="shortcut icon" sizes="48x48" href="/public/logo-48.png">
     <meta name="theme-color" content="#f60">
     <link rel="manifest" href="/manifest.json">
 
-      <link rel="preload" href="public/rlstudy.f66d594b5ca0aee8011d.js" as="script">
+    <link rel="preload" href="public/rlstudy.6e4d9f8ee83a6ee07c9e.js" as="script">
 
-      <link rel="preload" href="public/vendor.d755466fc53bb2b6d654.js" as="script">
+    <link rel="preload" href="public/vendor.4147e8074abc63e52c68.js" as="script">
     
   </head>
   <body>
-  <div id="app"></div>
-  <script type="text/javascript" src="public/vendor.d755466fc53bb2b6d654.js"></script>
-  <script type="text/javascript" src="public/rlstudy.f66d594b5ca0aee8011d.js"></script>
+  <div id="app">
+    <app></app>
+  </div>
+  <!--vue-ssr-outlet-->
+  <script type="text/javascript" src="public/vendor.4147e8074abc63e52c68.js"></script>
+  <script type="text/javascript" src="public/rlstudy.6e4d9f8ee83a6ee07c9e.js"></script>
   </body>
 </html>
