前端评分与评价划为不同的模块

--- a/rl-study/src/css/default.less
+++ b/rl-study/src/css/default.less
@@ -1,5 +1,6 @@
 @primarycolor: #208157;
 @secondcolor: lighten(#208157, 10%);
+@secondcolor: #FFA222;
 .fade-enter-active, .fade-leave-active {
   transition: opacity .5s
 }
