增加评论排序功能 增加文章点赞功能

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,17 +9,22 @@
     <meta name="theme-color" content="#f60">
     <link rel="manifest" href="/manifest.json">
 
-      <link rel="preload" href="public/rlstudy.66b9800b64a911bdb18e.js" as="script">
+    <link rel="preload" href="public/rlstudy.5492e23ef5da13b99fec.js" as="script">
 
-      <link rel="preload" href="public/vendor.f924dd456731fc5bd2e7.js" as="script">
-    
+    <link rel="preload" href="public/style.css" as="style">
+
+    <link rel="preload" href="public/vendor.d0ef61a8041fafc169a5.js" as="script">
+
+    <link rel="preload" href="public/style.css" as="style">
+
+    <link href="public/style.css" rel="stylesheet">
   </head>
   <body>
   <div id="app">
     <app></app>
   </div>
   <!--vue-ssr-outlet-->
-  <script type="text/javascript" src="public/vendor.f924dd456731fc5bd2e7.js"></script>
-  <script type="text/javascript" src="public/rlstudy.66b9800b64a911bdb18e.js"></script>
+  <script type="text/javascript" src="public/vendor.d0ef61a8041fafc169a5.js"></script>
+  <script type="text/javascript" src="public/rlstudy.5492e23ef5da13b99fec.js"></script>
   </body>
 </html>
