将兴趣 必修 选修 合并到一个tab中 新增我的tab

--- a/rl-study/src/css/default.less
+++ b/rl-study/src/css/default.less
@@ -1,6 +1,7 @@
-@primarycolor: #f56a00;
+@primarycolor: #00A1F5;
 @secondcolor: #f78e3d;
 @secondcolor: #f04134;
+@basecolor: #009EFF;
 * {
   margin: 0;
   padding: 0;
@@ -50,7 +51,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     border-bottom: 1px solid #e7e7eb;
-    @media (max-width: 400px) {
+    @media (max-width: 480px) {
       .list-item-content {
         height: 90px;
       }
