--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,22 +9,20 @@
     <meta name="theme-color" content="#f60">
     <link rel="manifest" href="/manifest.json">
 
-    <link rel="preload" href="public/rlstudy.5492e23ef5da13b99fec.js" as="script">
+    <link rel="preload" href="public/rlstudy.94060e8d0165ac73859d.js" as="script">
 
-    <link rel="preload" href="public/style.css" as="style">
+    <link rel="preload" href="public/vendor.a7b27ea56f8d40bae64e.js" as="script">
 
-    <link rel="preload" href="public/vendor.d0ef61a8041fafc169a5.js" as="script">
-
-    <link rel="preload" href="public/style.css" as="style">
-
-    <link href="public/style.css" rel="stylesheet">
+    <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script src="public/weixinAudio.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
   <div id="app">
     <app></app>
   </div>
   <!--vue-ssr-outlet-->
-  <script type="text/javascript" src="public/vendor.d0ef61a8041fafc169a5.js"></script>
-  <script type="text/javascript" src="public/rlstudy.5492e23ef5da13b99fec.js"></script>
+  <script type="text/javascript" src="public/vendor.a7b27ea56f8d40bae64e.js"></script>
+  <script type="text/javascript" src="public/rlstudy.94060e8d0165ac73859d.js"></script>
   </body>
+
 </html>
