文章列表增加 （学习中、未学习、已完成） 文章种类增加碎片课程与系统课程，进入到的详情页不同 详情页见图片 评论只能评论父课程 新增系统学习详情页 我的tab新增在学的课程 增加已学3%进度 根据浏览表（学习记录表）来统计 新增课程收藏 新增排行
管理端
课程列表图片栅格化 （评分、获评、获赞）只获取，新增 （学习进度跟踪）查看学习人列表以及进度时间
新增新建系统课程学习 标题 、介绍、适合人群 目录操作 系统课程修改
素材分类管理
统计 新增排行 （学分根据规则、评论、点赞等）

数据库
对课程增加类型 区分碎片课程、系统课程、系统课程下的子课程
增加课程目录表

--- a/admin/css/app.less
+++ b/admin/css/app.less
@@ -8,6 +8,7 @@
 @brand-second: #f56a00;
 @brand-second-tap: #d75000;
 @waringcolor: #f04134;
+@text-secondcolor: #787a7d;
 /*minix*/
 
 .text-overflow() {
