--- a/admin/css/admin.less
+++ b/admin/css/admin.less
@@ -10,27 +10,15 @@
 #main-container .trigger:hover {
   color: #108ee9;
 }
-
-#main-container .logo {
-  height: 32px;
-  background: #333;
-  border-radius: 6px;
-  margin: 16px;
-}
-
 #main-container .ant-layout-sider-collapsed .anticon {
   font-size: 16px;
-}
-
-#main-container .ant-layout-sider-collapsed .nav-text {
-  display: none;
 }
 
 .header-user-info-wrapper {
   float: right;
   margin-right: 24px;
+  color: #fff;
   .avator {
-
     margin-right: 12px;
     img {
       width: 42px;
@@ -43,7 +31,6 @@
     margin-right: 12px;
   }
   .logout {
-    color: #108ee9;
     cursor: pointer;
   }
 }
@@ -110,6 +97,18 @@
   }
 }
 
+.avator-wrapper.category {
+  margin-bottom: 16px;
+  margin-left: -17px;
+  .tip {
+    width: 25%;
+  }
+  .avator-img-wrapper {
+    width: 100%;
+    display: -webkit-box;
+    -webkit-box-pack: center;
+  }
+}
 .avator-wrapper {
   padding-left: 17px;
   margin-bottom: 12px;
@@ -317,256 +316,63 @@
   }
 }
 
-.preview-modal {
-  display: block;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-pack: center;
-
-  .preview-mask {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: -1;
-  }
-  .modal-content {
-    background: transparent;
-    position: relative;
-    box-shadow: none;
-    border: none;
-  }
-  .modal-body {
-    position: relative;
-    overflow: hidden;
-    padding: 0;
-    height: 658px;
-    background-image: url('../images/previewphone.jpg');
-    background-size: cover;
-    background-color: #fff;
-    border-radius: 28px;
-    .preview-body {
-      padding: 15px 12px;
-      overflow-x: hidden;
-      overflow-y: auto;
-      margin-top: 90px;
-      height: 499px;
-    }
-  }
-}
-
-.preview-modal.preview-320 {
-  .preview-modal-dialog {
-    width: 320px;
-  }
-}
-
-.preview-modal.preview-360 {
-  .preview-modal-dialog {
-    width: 360px;
-  }
-}
-
-.preview-modal.fade {
-  opacity: 0;
-  transition: opacity 0.15s linear;
-  margin: 30px auto;
-  .preview-modal-dialog {
-    -webkit-transform: translate(0, -25%);
-    -moz-transform: translate(0, -25%);
-    -ms-transform: translate(0, -25%);
-    -o-transform: translate(0, -25%);
-    transform: translate(0, -25%);
-    -webkit-transition: transform 0.3s ease-out;
-    -moz-transition: transform 0.3s ease-out;
-    -ms-transition: transform 0.3s ease-out;
-    -o-transition: transform 0.3s ease-out;
-    transition: transform 0.3s ease-out;
-  }
-}
-
-.preview-modal.fade.in {
-  opacity: 1;
-  .preview-modal-dialog {
-    -webkit-transform: translate(0, 0);
-    -moz-transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
-    -o-transform: translate(0, 0);
-    transform: translate(0, 0);
-    -webkit-transition: transform 0.3s ease-out;
-    -moz-transition: transform 0.3s ease-out;
-    -ms-transition: transform 0.3s ease-out;
-    -o-transition: transform 0.3s ease-out;
-    transition: transform 0.3s ease-out;
-  }
-}
-
-.detail-container {
-  background-color: #f5f5f5;
-  .detail-wrapper {
-    .detail-title {
-      font-size: 20px;
-      line-height: 1.6;
-      color: #333;
-      background-color: #fff;
-      padding: 12px 12px 0 12px;
-    }
-    article {
-      padding: 0 12px 12px 12px;
-      margin-bottom: 12px;
-      background-color: #fff;
-      overflow-x: hidden;
-      img {
-        max-width: 100%;
-      }
-      video {
-        max-width: 100%
-      }
-      span {
-        word-wrap: break-word !important;
-      }
-    }
-    iframe {
-      width: 300px !important;
-      height: 200px !important;
-    }
-    .detail-author, .detail-comment-item {
-      display: -webkit-box;
-      -webkit-box-orient: horizontal;
-      -webkit-box-align: start;
-      -webkit-box-pack: justify;
-      padding: 12px;
-      background-color: #fff;
-      .detail-author-info {
-        display: inline-block;
-        .detail-authorname, .detail-addtime {
-          margin-bottom: 6px;
-          font-size: 12px;
-          coloe: #666;
-
-        }
-        .detail-authorname {
-          font-size: 14px;
-        }
-      }
-
-      .detail-rate {
-        font-size: 14px;
-        i {
-          font-size: 20px;
-          margin-right: 8px;
-          color: red;
-        }
-      }
-      .detail-comment-wrapper {
-        background-color: #fff;
-        header {
-          line-height: 2;
-          padding: 0 12px;
-          .detail-comment-edit {
-            float: right;
-            font-size: 14px;
-            color: #208157;;
-          }
-        }
-        .detail-comment-item {
-          .detail-comment {
-            -webkit-box-flex: 1;
-            flex: 1;
-            border-bottom: 1px solid #eee;
-            .detail-comment-time {
-              margin-bottom: 4px;
-              font-size: 12px;
-              color: #666;
-            }
-            .detail-comment-content, .detail-comment-name {
-              font-size: 14px;
-              line-height: 1.6;
-              margin-bottom: 4px;
-              i {
-                float: right;
-                color: #666;
-              }
-            }
-            .detail-comment-callback {
-              padding-left: 8px;
-              background-color: #f5f5f5;
-              line-height: 1.6;
-              font-size: 12px;
-              color: #6F9FB5;
-            }
-          }
-        }
-      }
-    }
-    .detail-comment-wrapper {
-      background-color: #fff;
-      header {
-        line-height: 2;
-        padding: 0 12px;
-        .detail-comment-edit {
-          float: right;
-          font-size: 14px;
-          color: #208157;
-        }
-      }
-      .detail-comment-item {
-        .detail-comment {
-          -webkit-box-flex: 1;
-          flex: 1;
-          border-bottom: 1px solid #eee;
-          .detail-comment-time {
-            margin-bottom: 4px;
-            font-size: 12px;
-            color: #666;
-          }
-          .detail-comment-content, .detail-comment-name {
-            font-size: 14px;
-            line-height: 1.6;
-            margin-bottom: 4px;
-            i {
-              float: right;
-              color: #666;
-            }
-          }
-          .detail-comment-callback {
-            padding-left: 8px;
-            background-color: #f5f5f5;
-            line-height: 1.6;
-            font-size: 12px;
-            color: #6F9FB5;
-          }
-        }
-      }
-    }
-    .document-info {
-      .document-item-a {
-        width: 300px;
-        height: 60px;
-        padding: 12px;
-        img {
-          width: 36px;
-          margin-right: 12px;
-        }
-        .document-msg {
-          display: inline-block;
-          width: 213px;
-          p {
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
-          }
-        }
-      }
-    }
-  }
-}
-
 .headerimg {
   width: 36px;
   height: 36px;
   margin-right: 12px;
   border-radius: 50%;
+}
+
+.categoryedit-wrapper {
+  margin: 12px;
+  padding: 12px;
+  background-color: #fff;
+  .cardpanel {
+    margin-top: 12px;
+    padding: 12px 0;
+    text-align: center;
+    .button-groups {
+      height: 48px;
+    }
+  }
+}
+
+/*顶部过滤栏*/
+.filter-bar-wrapper {
+  padding: 8px 12px;
+  margin-bottom: 12px;
+  background-color: #fff;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .1);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, .1);
+  .title-bar {
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .control-bar {
+    padding: 8px 0;
+    line-height: 26px;
+    .filter {
+      display: inline-block;
+      margin-right: 20px;
+      label {
+        color: #787a7d;
+      }
+      .filter-bar {
+        display: inline-block;
+        .ant-form-item {
+          margin-bottom: 0;
+        }
+      }
+      .filter-radio-bar {
+        .ant-radio-button-wrapper-checked {
+          color: #fff;
+          background-color: #108ee9
+        }
+      }
+    }
+    .filter-advanced {
+      float: right;
+    }
+  }
 }
