上传加入进度percent

--- a/admin/css/admin.less
+++ b/admin/css/admin.less
@@ -241,6 +241,7 @@
     }
   }
   label {
+    position: relative;
     width: 200px;
     margin-right: 10px;
     margin-bottom: 11px;
@@ -286,10 +287,22 @@
       white-space: nowrap;
       text-overflow: ellipsis;
     }
+    /*.progress {
+      position: absolute;
+      top:0;
+      bottom:0;
+      left: 0;
+      right:0;
+      background-color: rgba(0,0,0,0.5);
+    }*/
   }
 }
 
+.audio-wrapper {
+  padding: 24px;
+}
 .document-wrapper {
+  padding: 24px;
   label.selected {
     border: 1px solid #43b548;
   }
